test_scores/negative_dimers/features/P78362.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P78362.pkl.xz